force-app/main/default/objects/Agent__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Agent is Actively working or not</description>
    <inlineHelpText>Agent is Actively working or not</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>