force-app/main/default/objects/Agent__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Captures the full residential or business address of the agent, including street, city, state, postal code, and country. This information is essential for location-based assignments, correspondence, and regulatory compliance.</description>
    <inlineHelpText>Enter the agent’s complete address, such as:
123 Main Street, Suite 101, Mumbai, Maharashtra, 400001, India.

Include all components (street, city, state, postal code, and country) for accuracy.</inlineHelpText>
    <label>Address</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>