force-app/main/default/objects/Agent__c/fields/Date_Of_Joining__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Joining__c</fullName>
    <description>Date of joing of agent in the organization</description>
    <inlineHelpText>fill the date of joing of agent</inlineHelpText>
    <label>Date Of Joining</label>
    <required>true</required>
    <type>Date</type>
</CustomField>