force-app/main/default/objects/Agent__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The filed is store the name of Agent</description>
    <inlineHelpText>Valid Agent email for the communication purpose</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>