force-app/main/default/objects/Agent__c/fields/FirstName_c__c.field-meta.xml
<CustomField>
    <fullName>FirstName_c__c</fullName>
    <description>First name</description>
    <inlineHelpText>Agent&apos;s first name</inlineHelpText>
    <label>FirstName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>