force-app/main/default/objects/Agent__c/fields/LastName_c__c.field-meta.xml
<CustomField>
    <fullName>LastName_c__c</fullName>
    <description>Last name</description>
    <inlineHelpText>Agent&apos;s last name</inlineHelpText>
    <label>LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>