force-app/main/default/objects/Agent__c/fields/Name_Email__c.field-meta.xml
<CustomField>
    <fullName>Name_Email__c</fullName>
    <formula>Name + &quot; &quot; +  Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name + Email</label>
    <type>Text</type>
</CustomField>