force-app/main/default/objects/Agent__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Stores the primary contact number of the Agent. This phone number is used for direct communication regarding customer support, sales follow-ups, and internal coordination.</description>
    <inlineHelpText>The Valid Agent Phone</inlineHelpText>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>