force-app/main/default/objects/Agent__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Senior Agent</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Junior Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>