force-app/main/default/objects/Agent__c/fields/Saluation__c.field-meta.xml
<CustomField>
    <fullName>Saluation__c</fullName>
    <description>Add a title or greeting prefix used before a person&apos;s name.</description>
    <inlineHelpText>a title or greeting prefix used before a person&apos;s name.</inlineHelpText>
    <label>Saluation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Mx.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>