force-app/main/default/objects/Agent__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <description>Agent have to choose the One or Multiple filed in which they are Specailized</description>
    <inlineHelpText>Agent Specailization</inlineHelpText>
    <label>Specialization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residentail</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Luxary</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>