force-app/main/default/objects/Agent__c/fields/Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience__c</fullName>
    <description>the total number of years the agent has been actively involved in selling properties.</description>
    <inlineHelpText>Years of Experience The agent is selling the properties</inlineHelpText>
    <label>Years of Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>