force-app/main/default/objects/Agent__c/validationRules/Name_can_not_contain_test.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_can_not_contain_test</fullName>
    <active>true</active>
    <description>Name Can not Contain Test Keyword</description>
    <errorConditionFormula>AND(
  ISNEW(),
  OR(
    CONTAINS(UPPER(Name), &apos;TEST&apos;),
    CONTAINS(UPPER(Email__c), &apos;TEST&apos;)
  )
)</errorConditionFormula>
    <errorMessage>Name OR Email field can not contain test</errorMessage>
</ValidationRule>